[gd_scene load_steps=10 format=2]

[ext_resource path="res://Textures/colored_transparent_packed.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Sound/HitSound.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="CircleShape2D" id=2]
radius = 128.0

[sub_resource type="Animation" id=3]
resource_name = "Hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.933333, 0.188235, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 20.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -5.0, 5.0, 0.0 ]
}

[sub_resource type="AudioStreamRandomPitch" id=5]
audio_stream = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4, 6 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AgroArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AgroArea"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -7 )
region_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="HitAnim" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 3 )

[node name="HitAudio" type="AudioStreamPlayer" parent="."]
stream = SubResource( 5 )

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="AttackFromPos" type="Position2D" parent="."]
position = Vector2( 0, -5 )

[node name="HitBox" type="Area2D" parent="."]
position = Vector2( 0, -6 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 6 )

[node name="StunTimer" type="Timer" parent="."]
[connection signal="body_entered" from="AgroArea" to="." method="_on_AgroArea_body_entered"]
